# objectstore-mcp

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vulture_ignore  404.html  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  a2a.json  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
architecture/: index.html
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: architecture.md  concepts.md  deployment.md  index.md  installation.md  overview.md  platform.md  usage.md
installation/: index.html
objectstore_mcp/: __init__.py  __main__.py  agent_server.py  api_client.py  auth.py  config.py  main_agent.json  mcp_server.py  objectstore_input_models.py  objectstore_response_models.py
objectstore_mcp/api/: __init__.py  api_client_azure_blob.py  api_client_filesystem.py  api_client_gcs.py  api_client_s3.py
objectstore_mcp/backends/: __init__.py  azure_blob.py  base.py  filesystem.py  gcs.py  s3.py
objectstore_mcp/mcp/: __init__.py  mcp_objectstore.py
objectstore_mcp/skills/objectstore-starter/: SKILL.md
overview/: index.html
platform/: index.html
scripts/: validate_agent.py  verify_api_integration.py
search/: search_index.json
tests/: conftest.py  test_api_wrapper.py  test_auth.py  test_azure_backend.py  test_backend_conformance.py  test_concept_parity.py  test_config.py  test_gcs_backend.py  test_init_dynamics.py  test_mcp_tools.py  test_optional_dependencies.py  test_s3_backend.py  test_s3_moto.py  test_safety.py  test_startup.py
usage/: index.html
