[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "objectstore-mcp"
version = "0.1.0"
description = "Object storage MCP connector: S3/MinIO/R2, Google Cloud Storage, Azure Blob, and a zero-infra local filesystem backend."
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.15"
dependencies = [ "agent-utilities[mcp]>=0.47.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
s3 = [ "boto3>=1.34.0",]
gcs = [ "google-cloud-storage>=2.16.0",]
azure = [ "azure-storage-blob>=12.20.0",]
all = [ "objectstore-mcp[s3,gcs,azure]",]
test = [ "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov", "pytest-timeout>=2.4.0",]
test-s3 = [ "objectstore-mcp[s3,test]", "moto[s3]>=5.0.0",]

[project.scripts]
objectstore-mcp = "objectstore_mcp.mcp_server:mcp_server"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [ "pytest-timeout>=2.4.0",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "objectstore_mcp*",]
