[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "objectstore-mcp"
version = "0.2.0"
description = "Object storage (S3/MinIO/R2, Google Cloud Storage, Azure Blob, local filesystem) API + MCP Server + A2A Server for Agentic AI!"
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.15"
dependencies = [ "agent-utilities>=0.48.0", "python-dotenv>=1.0.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=0.48.0",]
agent = [ "agent-utilities[agent,logfire]>=0.48.0",]
s3 = [ "boto3>=1.34.0",]
gcs = [ "google-cloud-storage>=2.16.0",]
azure = [ "azure-storage-blob>=12.20.0",]
all = [ "objectstore-mcp[mcp,agent,s3,gcs,azure,logfire]>=0.2.0",]
test = [ "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov", "moto[s3]>=5.0.0",]

[project.scripts]
objectstore-mcp = "objectstore_mcp.mcp_server:mcp_server"
objectstore-agent = "objectstore_mcp.agent_server:agent_server"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [ "pytest-timeout>=2.4.0",]

[tool.setuptools.package-data]
objectstore_mcp = [ "mcp_config.json", "agent_data/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.vulture]
ignore_names = ["request", "config", "local_store_env"]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "objectstore_mcp*",]
